--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 # See here for image contents: https://github.com/microsoft/vscode-dev-containers/tree/v0.224.3/containers/go/.devcontainer/base.Dockerfile
 
 # [Choice] Go version (use -bullseye variants on local arm64/Apple Silicon): 1, 1.16, 1.17, 1-bullseye, 1.16-bullseye, 1.17-bullseye, 1-buster, 1.16-buster, 1.17-buster
-ARG VARIANT="1.19-bullseye"
+ARG VARIANT="1.20-bullseye"
 FROM mcr.microsoft.com/vscode/devcontainers/go:0-${VARIANT}
 
 # [Choice] Node.js version: none, lts/*, 16, 14, 12, 10
@@ -10,12 +10,12 @@ RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/
 
 # [Optional] Uncomment this section to install additional OS packages.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends file
+    && apt-get -y install --no-install-recommends \
+	graphviz
 
 # [Optional] Uncomment the next lines to use go get to install anything else you need
 USER vscode
-# List of tools used by vscode go extension
-# TODO: Find a way to run "Go: Install/Update Tools" in vscode
+# VSCode tools
 RUN go install github.com/cweill/gotests/gotests@v1.6.0
 RUN go install github.com/fatih/gomodifytags@v1.16.0
 RUN go install github.com/josharian/impl@v1.1.0
@@ -24,6 +24,9 @@ RUN go install github.com/go-delve/delve/cmd/dlv@latest
 RUN go install honnef.co/go/tools/cmd/staticcheck@latest
 RUN go install golang.org/x/tools/gopls@latest
 
+# Benchmarking
 RUN go install github.com/rakyll/hey@latest
-RUN go install golang.org/x/pkgsite/cmd/pkgsite@latest
-ENV PATH=/home/vscode/go/bin:${PATH}
+RUN go install golang.org/x/perf/cmd/benchstat@latest
+
+# [Optional] Uncomment this line to install global node packages.
+# RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
